# cmd/api/handler/requests.go
@@ -4,6 +4,7 @@ import (
 	"strings"
 
 	"github.com/dipdup-net/indexer-sdk/pkg/storage"
+	"github.com/labstack/echo/v4"
 )
 
 const (
@@ -38,11 +39,15 @@ func pgSort(sort string) storage.SortOrder {
 }
 
 type txListRequest struct {
-	Limit   uint64      `json:"limit"     param:"limit"                      query:"limit"  validate:"omitempty,min=1,max=100"`
-	Offset  uint64      `json:"offset"    param:"offset"                     query:"offset" validate:"omitempty,min=0"`
-	Sort    string      `json:"sort"      param:"sort"                       query:"sort"   validate:"omitempty,oneof=asc desc"`
+	Limit   uint64      `query:"limit"    validate:"omitempty,min=1,max=100"`
+	Offset  uint64      `query:"offset"   validate:"omitempty,min=0"`
+	Sort    string      `query:"sort"     validate:"omitempty,oneof=asc desc"`
+	Height  uint64      `query:"height"   validate:"omitempty,min=1"`
 	Status  StringArray `query:"status"   validate:"omitempty,dive,status"`
 	MsgType StringArray `query:"msg_type" validate:"omitempty,dive,msg_type"`
+
+	From int64 `example:"1692892095" query:"from" swaggertype:"integer" validate:"omitempty,min=1"`
+	To   int64 `example:"1692892095" query:"to"   swaggertype:"integer" validate:"omitempty,min=1"`
 }
 
 func (p *txListRequest) SetDefault() {
@@ -63,3 +68,14 @@ func (s *StringArray) UnmarshalParam(param string) error {
 
 type StatusArray StringArray
 type MsgTypeArray StringArray
+
+func bindAndValidate[T any](c echo.Context) (*T, error) {
+	req := new(T)
+	if err := c.Bind(req); err != nil {
+		return req, err
+	}
+	if err := c.Validate(req); err != nil {
+		return req, err
+	}
+	return req, nil
+}
